@@ -60,11 +60,7 @@ public final class FixedBitSet extends BitSet implements MutableBits, Accountabl
 
   /** returns the number of 64 bit words it would take to hold numBits */
   public static int bits2words(int numBits) {
-    int numLong = numBits >>> 6;
-    if ((numBits & 63) != 0) {
-      numLong++;
-    }
-    return numLong;
+    return ((numBits - 1) >> 6) + 1; // I.e.: get the word-offset of the last bit and add one (make sure to use >> so 0 returns 0!)
   }
 
   /**
@@ -356,7 +352,7 @@ public final class FixedBitSet extends BitSet implements MutableBits, Accountabl
     int startWord = startIndex >> 6;
     int endWord = (endIndex-1) >> 6;
 
-    /*** Grrr, java shifting wraps around so -1L>>>64 == -1
+    /*** Grrr, java shifting uses only the lower 6 bits of the count so -1L>>>64 == -1
      * for that reason, make sure not to use endmask if the bits to flip will
      * be zero in the last word (redefine endWord to be the last changed...)
     long startmask = -1L << (startIndex & 0x3f);     // example: 11111...111000
@@ -364,7 +360,7 @@ public final class FixedBitSet extends BitSet implements MutableBits, Accountabl
     ***/
 
     long startmask = -1L << startIndex;
-    long endmask = -1L >>> -endIndex;  // 64-(endIndex&0x3f) is the same as -endIndex due to wrap
+    long endmask = -1L >>> -endIndex;  // 64-(endIndex&0x3f) is the same as -endIndex since only the lowest 6 bits are used
 
     if (startWord == endWord) {
       bits[startWord] ^= (startmask & endmask);
@@ -405,7 +401,7 @@ public final class FixedBitSet extends BitSet implements MutableBits, Accountabl
     int endWord = (endIndex-1) >> 6;
 
     long startmask = -1L << startIndex;
-    long endmask = -1L >>> -endIndex;  // 64-(endIndex&0x3f) is the same as -endIndex due to wrap
+    long endmask = -1L >>> -endIndex;  // 64-(endIndex&0x3f) is the same as -endIndex since only the lowest 6 bits are used
 
     if (startWord == endWord) {
       bits[startWord] |= (startmask & endmask);
@@ -429,7 +425,7 @@ public final class FixedBitSet extends BitSet implements MutableBits, Accountabl
     int endWord = (endIndex-1) >> 6;
 
     long startmask = -1L << startIndex;
-    long endmask = -1L >>> -endIndex;  // 64-(endIndex&0x3f) is the same as -endIndex due to wrap
+    long endmask = -1L >>> -endIndex;  // 64-(endIndex&0x3f) is the same as -endIndex since only the lowest 6 bits are used
 
     // invert masks since we are clearing
     startmask = ~startmask;
